# Opam

./: CMakeLists.txt  empty_test.cpp  erase_back_test.cpp  erase_front_test.cpp  insert_back_test.cpp  iterator_tests.cpp  list.cpp  main.cpp  size_test.cpp
.github/workflows/: ci-configuraation.yml  ci-configuration.yml
